# stadt-land-vollpfosten

./: Cargo.toml  README.md
src/: cards.rs  dice.rs  lib.rs  main.rs  timer.rs  web_app.rs
src/categories/: adult_edition.txt  default_edition.txt  junior_edition.txt
src/templates/: categories.jinja  home.jinja  layout.jinja  prepare.jinja  result.jinja  round.jinja  start.jinja  timer.jinja
